# optics-framework

./: .cz.toml  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  README.md  SECURITY.md  dev_requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  sonar-project.properties  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflow/: precommit_check.yml
.github/workflows/: codeql.yml  greetings.yml  mozarksonar.yml  precommit_main.yml  publish_docs.yml  pypi-publish.yml  scorecard.yml
Docker/: deployment.md  docker-compose.yml
Docker/dev/: Dockerfile  requirements.txt
Docker/prod/: Dockerfile  requirements.txt
api_reference/: index.html
api_reference/action_keywords/: index.html
api_reference/app_management/: index.html
api_reference/flow_control/: index.html
api_reference/optics/: index.html
api_reference/verification/: index.html
architecture/: index.html
architecture/api_layer/: index.html
architecture/cli_layer/: index.html
architecture/components/: index.html
architecture/decisions/: index.html
architecture/engines/: index.html
architecture/error_handling/: index.html
architecture/event_system/: index.html
architecture/execution/: index.html
architecture/extending/: index.html
architecture/library_layer/: index.html
architecture/logging/: index.html
architecture/strategies/: index.html
autocompletion/: optics_completion.sh  optics_completion.zsh
configuration/: index.html
contribution/code_of_conduct/: index.html
contribution/contributing_guidelines/: index.html
contribution/developer_guide/: index.html
contribution/help_wanted/: index.html
docs/: api_reference.md  architecture.md  configuration.md  index.md  introduction.md  quickstart.md  user_workflow.md
docs/api_reference/: action_keywords.md  app_management.md  flow_control.md  optics.md  verification.md
docs/architecture/: api_layer.md  cli_layer.md  components.md  decisions.md  engines.md  error_handling.md  event_system.md  execution.md  extending.md  library_layer.md  logging.md  strategies.md
docs/contribution/: code_of_conduct.md  contributing_guidelines.md  developer_guide.md  help_wanted.md
docs/source/: conf.py  index.rst
docs/source/api_reference/: Optics_Framework.engines.screenshot.rst
docs/source/contrib/: contributing_guidelines.rst  developer_guide.rst
docs/source/usage/: usage.rst
docs/usage/: CLI_usage.md  REST_API_usage.md  keyword_usage.md  library_usage.md  live_usage.md  robot_usage.md  usage.md
introduction/: index.html
optics_framework/: config_usage.md  optics.py  quickstart.md
optics_framework/api/: __init__.py  action_keyword.py  app_management.py  flow_control.py  verifier.py
optics_framework/common/: Junit_eventhandler.py  ai_self_heal.py  async_utils.py  base_factory.py  config_handler.py  driver_factory.py  driver_interface.py  elementsource_factory.py  elementsource_interface.py  error.py  eventSDK.py  events.py  execution.py  execution_tracer.py  expose_api.py  factories.py  image_factory.py  image_interface.py  llm_interface.py  logging_config.py  logging_utils.py  models.py  nl_agent.py  optics_builder.py  screenshot_stream.py  session_manager.py  strategies.py  test_context.py  text_factory.py  text_interface.py  utils.py
optics_framework/common/runner/: csv_reader.py  data_reader.py  keyword_register.py  printers.py  test.py  test_runnner.py
optics_framework/engines/drivers/: appium.py  appium_UI_helper.py  appium_driver_manager.py  ble.py  playwright.py  selenium.py  selenium_UI_helper.py  selenium_driver_manager.py
optics_framework/engines/elementsources/: appium_find_element.py  appium_page_source.py  appium_screenshot.py  camera_screenshot.py  device_screenshot.py  playwright_find_element.py  playwright_page_source.py  playwright_screenshot.py  selenium_find_element.py  selenium_page_source.py  selenium_screenshot.py
optics_framework/engines/llm_models/: gemini.py
optics_framework/engines/vision_models/: base_methods.py
optics_framework/helper/: autocompletion.py  cli.py  config_manager.py  execute.py  generate.py  initialize.py  list_keyword.py  live.py  live_tui.py  serve.py  setup.py  version.py
optics_framework/samples/: metadata.json
optics_framework/samples/calendar/: config.yaml  test_cases.csv  test_modules.csv
optics_framework/samples/clock/: config.yaml
optics_framework/samples/contact/: config.yaml  test_modules.csv
optics_framework/samples/gmail_web/: config.yaml  modules.csv
optics_framework/samples/google/: config.yaml  elements.csv  test_cases.csv  test_modules.csv
quickstart/: index.html
search/: search_index.json
stylesheets/: extra.css
tests/mock_servers/: api.yaml  single_server.py
tests/units/: conftest.py  test_optics.py
tools/: moc_camera_tcp.py  mock_remote_ocr.py
tools/mock_remote_ocr/: mock_remote_ocr.py
tools/mock_site/: index.html
usage/CLI_usage/: index.html
usage/REST_API_usage/: index.html
usage/keyword_usage/: index.html
usage/library_usage/: index.html
usage/live_usage/: index.html
usage/robot_usage/: index.html
usage/usage/: index.html
user_workflow/: index.html
(+56 files in other folders)
