[tool.poetry]
name = "optics-framework"
version = "1.0.0"
description = "A flexible and modular test automation framework that can be used to automate any mobile application."
authors = ["Lalitanand Dandge <lalit@mozark.ai>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["test automation", "framework", "mobile automation"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
lxml = "^5.3.1"
fuzzywuzzy = "^0.18.0"
opencv-python = "^4.11.0.86"
python-levenshtein = "^0.27.1"
prompt-toolkit = "^3.0.50"
rich = "^13.9.4"
python-json-logger = "^3.3.0"
sse-starlette = "^2.2.1"
fastapi = "^0.115.12"
requests = "^2.32.3"
textual = "^3.0.0"
pytest = "^8.3.5"
pydantic = "^2.11.2"

[tool.poetry.group.dev.dependencies]
tox = "~4.24.1"
pytest = "~8.3.4"
pytest-cov = "~6.0.0"
pandas = ">=2.0.0,<3.0.0"
commitizen = "^4.4.1"
pre-commit = "^4.2.0"
ruff = "^0.11.2"
bandit = "^1.8.3"

[tool.poetry.group.test.dependencies]
pytest = "~8.3.4"
pytest-cov = "~6.0.0"
pytest-mock = "~3.14.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.11"

[tool.poetry.scripts]
optics = "optics_framework.helper.cli:main"

[tool.pytest.ini_options]
minversion = "8.3.4"
addopts = "-ra -q --cov=optics_framework"
testpaths = ["tests"]

[tool.pylint.main]
disable = ["C0114", "C0115", "C0116"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
