[tool.poetry]
name = "optics-framework"
version = "1.3.8"
description = "A flexible and modular test automation framework that can be used to automate any mobile application."
authors = ["Lalitanand Dandge <lalit@mozark.ai>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["test automation", "framework", "mobile automation"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
lxml = ">=5.3.1,<7.0.0"
fuzzywuzzy = "^0.18.0"
opencv-python = "^4.11.0.86"
python-levenshtein = "^0.27.1"
prompt-toolkit = "^3.0.50"
rich = ">=13.9.4,<15.0.0"
python-json-logger = "^3.3.0"
sse-starlette = "^2.2.1"
fastapi = "^0.115.12"
requests = "^2.32.3"
textual = "^3.0.0"
pytest = "^8.3.5"
pydantic = "^2.11.2"
scikit-image = "^0.25.2"
uvicorn = "^0.35.0"

[tool.poetry.group.dev.dependencies]
tox = ">=4.24.1,<4.28.0"
pytest = ">=8.3.4,<8.5.0"
pytest-cov = ">=6.0,<6.3"
commitizen = "^4.4.1"
pre-commit = "^4.2.0"
ruff = ">=0.11.2,<0.13.0"
bandit = "^1.8.3"

[tool.poetry.group.test.dependencies]
pytest = ">=8.3.4,<8.5.0"
pytest-cov = ">=6.0,<6.3"
pytest-mock = "~3.14.0"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.11"

[tool.poetry.scripts]
optics = "optics_framework.helper.cli:main"

[tool.pytest.ini_options]
minversion = "8.3.4"
addopts = "-ra -q --cov=optics_framework"
testpaths = ["tests"]

[tool.pylint.main]
disable = ["C0114", "C0115", "C0116"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
