[tool.poetry]
name = "optics-framework"
version = "1.7.14"
description = "A flexible and modular test automation framework that can be used to automate any mobile application."
authors = ["Lalitanand Dandge <lalit@mozark.ai>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["test automation", "framework", "mobile automation"]
homepage = "https://github.com/mozarkai/optics-framework"
repository = "https://github.com/mozarkai/optics-framework"
documentation = "https://mozarkai.github.io/optics-framework/"
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Testing",
]
include = [
	"optics_framework/py.typed"
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
lxml = ">=5.3.1,<7.0.0"
fuzzywuzzy = "^0.18.0"
opencv-python = "^4.11.0.86"
python-levenshtein = "^0.27.1"
prompt-toolkit = "^3.0.50"
rich = ">=13.9.4,<15.0.0"
python-json-logger = ">=3.3,<5.0"
sse-starlette = ">=2.2.1,<4.0.0"
fastapi = ">=0.115.12,<0.119.0"
requests = "^2.32.3"
textual = ">=3,<7"
pytest = "^8.3.5"
pydantic = "^2.11.2"
scikit-image = "^0.25.2"
uvicorn = ">=0.35,<0.38"
jsonpath-ng = "^1.7.0"

[tool.poetry.group.dev.dependencies]
tox = ">=4.24.1,<4.31.0"
pytest = ">=8.3.4,<8.5.0"
pytest-cov = ">=6.0,<7.1"
commitizen = "^4.4.1"
pre-commit = "^4.2.0"
ruff = ">=0.11.2,<0.14.0"
bandit = "^1.8.3"
pylint = "^3.3.7"

[tool.poetry.group.test.dependencies]
pytest = ">=8.3.4,<8.5.0"
pytest-cov = ">=6.0,<7.1"
pytest-mock = ">=3.14,<3.16"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.11"
mkdocstrings = {extras = ["python"], version = "^1.0.2"}
mkdocs-minify-plugin = "^0.8.0"


[tool.poetry.scripts]
optics = "optics_framework.helper.cli:main"

[tool.pytest.ini_options]
minversion = "8.3.4"
addopts = "-ra -q --cov=optics_framework"
testpaths = ["tests"]

[tool.pylint.main]
disable = ["C0114", "C0115", "C0116"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
